@@ -1,3 +1,8 @@
+2012-08-28  Andreas Kupries  <andreask@activestate.com>
+
+	* widget_validator.man: New file, documentation.
+	* validator.tcl: Added argument check to method validate.
+
 2012-08-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* initial release v0.1
